[workspace]
members = [
    "rabbfn",
    "rabbfn-macros",
    "examples",
]
resolver = "3"

[workspace.package]
authors = ["1149520393@qq.com"]
edition = "2024"
homepage = "https://www.soyue.top"
repository = "https://github.com/xiao-xiang/rabbfn.git"
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rabbfn-macros = { version = "0.1.0", path = "rabbfn-macros" }
async-trait = "0.1"
futures = "0.3"
thiserror = "1.0"
lapin = "2.3.1"
tower = { version = "0.4", features = ["full"] }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false
