[package]
name = "examples"
version = "0.1.1"
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lapin = { workspace = true }
rabbfn = { version = "0.1.0", path = "../rabbfn" }
