[package]
name = "rabbfn"
version = "0.1.0"
description = "A function-first RabbitMQ consumer framework for Rust."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rabbfn-macros = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
lapin = { workspace = true }
tower = { workspace = true }
